# tamara

./: index.html  package-lock.json  package.json
src/: App.css  App.tsx  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs
src/components/: EEGWaveform.tsx  FrequencyBands.tsx  LSLConfiguration.tsx  MeditationControls.tsx  StreamVisualization.tsx
